objects/ALTF__Sales_Process_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>These settings control certain aspects of Altify Sales Process behavior. They should be controlled at organization level only (as opposed to user level or user profile level).</description>
    <fields>
        <fullName>ALTF__Allow_Sales_Process_Popup__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable Sales Process to be selected/changed on the page</description>
        <inlineHelpText>Enable Sales Process to be selected/changed on the page</inlineHelpText>
        <label>Allow Sales Process Popup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_Sales_Process_Overview__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable the Sales Process overview panel on the OM Sales Process tab.</description>
        <inlineHelpText>Disable the Sales Process overview panel on the OM Sales Process tab.</inlineHelpText>
        <label>Disable Sales Process Overview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Mock_Opp_Created_Date_Field__c</fullName>
        <description>This field is only applicable for Trialforce demos.
Sales Process can use a field other than creation date for Opportunity created dates.</description>
        <label>Mock Opp Created Date Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Mock_Opp_Health_Field__c</fullName>
        <description>This field is only applicable for Trialforce demos.
Sales Process can use a field other than Health__c for Altify Shadown Opportunity health values.</description>
        <label>Mock DM Opp Health Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Opp_Amount_Field__c</fullName>
        <description>Leave blank to have Sales Process and Team View use the standard opportunity amount field. Set this to the API name of a custom opportunity field to have Sales Process and Team View refer to a custom amount field.</description>
        <inlineHelpText>Leave blank to have Sales Process and Team View use the standard opportunity amount field. Set this to the API name of a custom opportunity field to have Sales Process and Team View refer to a custom amount field.</inlineHelpText>
        <label>Opp Amount Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Process_Selection_Field__c</fullName>
        <defaultValue>&quot;Type&quot;</defaultValue>
        <description>This value allows an administrator to control which opportunity field to reference to determine which sales process will be selected.</description>
        <inlineHelpText>This value allows an administrator to control which opportunity field to reference to determine which sales process will be selected.</inlineHelpText>
        <label>Process Selection Field</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Revenue_Goal_Field__c</fullName>
        <description>If set to a value then it is understood that that field on the User object contains an annual quota for Bookings (may add billings later) that can be used by Team Views</description>
        <inlineHelpText>If set then Team View will display the appropriate &quot;pro rata&quot; value for the quota beside the user and may provide some visual feedback as to how user is performing against quota.</inlineHelpText>
        <label>Revenue Goal Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Template_Company_Name__c</fullName>
        <description>DO NOT EDIT. This stores the chosen value for the Company Name that is used when generating the Qualifiers.This is set the first time Genius is run and should not be subsequently updated.</description>
        <inlineHelpText>This stores the chosen value for the Company Name that is used when generating the Qualifiers. This is set the first time Genius is run and should not be subsequently updated.</inlineHelpText>
        <label>Genius Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Template_Customer_Reference__c</fullName>
        <description>DOT NOT UPDATE - This stores the chosen value for the Customer Reference that is used when generating the Qualifiers. This is set the first time Genius is run and should not be subsequently updated.</description>
        <inlineHelpText>This stores the chosen value for the Customer Reference that is used when generating the Qualifiers. This is set the first time Genius is run and should not be subsequently updated.</inlineHelpText>
        <label>Genius Customer Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Update_Opportunity_Close_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field allows an administrator to control whether or Altify will write back the calculated close date to the Opportunity Close Date field</description>
        <inlineHelpText>This field allows an administrator to control whether or Altify will write back the calculated close date to the Opportunity Close Date field</inlineHelpText>
        <label>Update Opportunity Close Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Update_Opportunity_Probability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field allows an administrator to control whether or not Altify will write back the calculated probability to the Opportunity probability field</description>
        <inlineHelpText>This field allows an administrator to control whether or not Altify will write back the calculated probability to the Opportunity probability field</inlineHelpText>
        <label>Update Opportunity Probability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Update_Opportunity_Stage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field allows an administrator to control whether or Altify will write back the calculated Stage to the Opportunity Stage field</description>
        <inlineHelpText>This field allows an administrator to control whether or Altify will write back the calculated Stage to the Opportunity Stage field</inlineHelpText>
        <label>Update Opportunity Stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Use_Sales_Process_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field allows an administrator to enable Altify to use the Sales Process Mapping custom object to map opportunities to particular sales proceses</description>
        <inlineHelpText>This field allows an administrator to enable Altify to use the Sales Process Mapping custom object to map opportunities to particular sales proceses</inlineHelpText>
        <label>Use Sales Process Map</label>
        <type>Checkbox</type>
    </fields>
    <label>Altify Sales Process Settings</label>
</CustomObject>